# detectron2

./: pyproject.toml
detectron2/config/: defaults.py
detectron2/data/: detection_utils.py
detectron2/engine/: defaults.py  train_loop.py
detectron2/modeling/backbone/: fpn.py  resnet.py
detectron2/modeling/meta_arch/: retinanet.py
